# fluttermint

./: .gitignore  .metadata  DEVELOPING.md  Dockerfile  LICENSE  README.md  justfile  pubspec.yaml
android/: build.gradle  gradle.properties
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/fluttermint/: MainActivity.kt
android/app/src/main/res/values-night-v31/: styles.xml
android/app/src/main/res/values-v31/: styles.xml
android/app/src/profile/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
assets/: spinny_globe.riv
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_generated.dart  client.dart  ffi.dart  generated_plugin_registrant.dart  main.dart  router.dart  wasm.dart  wasm_generated.dart
lib/data/: balance.dart  prefs.dart  receive.dart  send.dart  transactions.dart
lib/screens/: Home.dart  about.dart  error_page.dart  home.dart  receive.dart  receive_confirm.dart  receiveconfirm.dart  send.dart  send_confirm.dart  send_finish.dart  sendconfirm.dart  setup.dart  setup_join.dart  setupjoin.dart
lib/utils/: connection_status.dart  constants.dart  network_detector_notifier.dart  unimplemented.dart
lib/widgets/: autopaste_text_field.dart  balance_display.dart  button.dart  chill_info_card.dart  chillinfocard.dart  content_padding.dart  contentpadding.dart  data_expander.dart  ellipsable_text.dart  fedi_appbar.dart  fedi_tooltip.dart  logo_action.dart  logoaction.dart  not_connected_warning.dart  outline_gradient.dart  qr_display.dart  qr_scanner.dart  reassemble_listener.dart  scroll_if_u_want.dart  single_tx.dart  small_balance_display.dart  testbutton.dart  textured.dart  toggle.dart  transaction_list.dart
linux/: CMakeLists.txt  my_application.cc
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  bridge_generated.h
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
minimint-bridge/: Cargo.toml  README.md  flake.nix
minimint-bridge/.cargo/: config.toml
minimint-bridge/minimint-bridge.xcodeproj/: project.pbxproj
minimint-bridge/minimint-bridge.xcodeproj/xcuserdata/futurepaul.xcuserdatad/xcschemes/: xcschememanagement.plist
minimint-bridge/minimint-bridge.xcodeproj/xcuserdata/justin.xcuserdatad/xcschemes/: xcschememanagement.plist
minimint-bridge/src/: api.rs  bridge_generated.rs  client.rs  lib.rs  payments.rs  wasm_client.rs
test/: widget_test.dart
web/: index.d.ts  index.html  index.js  index.ts  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
