[package]
name = "minimint-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1"
futures = "0.3"

mint-client = { git = "https://github.com/justinmoon/fedimint", branch = "fluttermint-3" }
fedimint-api = { git = "https://github.com/justinmoon/fedimint", branch = "fluttermint-3" }
fedimint-core = { git = "https://github.com/justinmoon/fedimint", branch = "fluttermint-3" }
fedimint-sled = { git = "https://github.com/justinmoon/fedimint", branch = "fluttermint-3" }
# mint-client = { path = "../../fedimint/client/client-lib/"}
# fedimint-api = { path = "../../fedimint/fedimint-api/" }
# fedimint-core = { path = "../../fedimint/fedimint-core/" }
# fedimint-sled = { path = "../../fedimint/fedimint-sled/" }

serde = { version = "1.0.142", features = [ "derive" ] }
serde_json = "1.0.79"
rand = { version = "0.6.5" }
bitcoin = "0.28.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.0", features = [ "json" ], default-features = false }
lightning-invoice = "0.18.0"
tracing = "0.1.26"

tracing-subscriber = { version = "0.3.1", features = [ "env-filter" ] }
flutter_rust_bridge = "1"
sled = "0.34.6"
tokio = {version = "1.0", features = ["full"]}

[target.'cfg(target_os = "ios")'.dependencies]
tracing-oslog = "0.1.2"

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = { git = "https://github.com/justinmoon/paranoid-android", branch="c_char" }

[patch.crates-io]
bitcoin_hashes = { version = "0.10.0", git = 'https://github.com/fedimint/bitcoin_hashes', branch = 'minimint' }
secp256k1-zkp = { git = "https://github.com/fedimint/rust-secp256k1-zkp/", branch = "sanket-pr" }
